force-app/main/default/objects/ValidationRuleConfig__mdt/ValidationRuleConfig__mdt.object-meta.xml
<CustomObject>
    <label>ValidationRuleConfig</label>
    <pluralLabel>ValidationRuleConfig</pluralLabel>
</CustomObject>