force-app/main/default/objects/ValidationRuleConfig__mdt/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child</label>
    <type>Checkbox</type>
</CustomField>