force-app/main/default/objects/ValidationRuleConfig__mdt/fields/GardenRelationship__c.field-meta.xml
<CustomField>
    <fullName>GardenRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GardenRelationship</label>
    <type>Checkbox</type>
</CustomField>