force-app/main/default/objects/ValidationRuleConfig__mdt/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package</label>
    <type>Checkbox</type>
</CustomField>