force-app/main/default/objects/ValidationRuleConfig__mdt/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Status</label>
    <type>Checkbox</type>
</CustomField>