force-app/main/default/objects/ValidationRuleConfig__mdt/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan</label>
    <type>Checkbox</type>
</CustomField>